--- a/css/footer.css
+++ b/css/footer.css
@@ -8,12 +8,6 @@ body {
 }
 
 
-body h1, h2 {
-    font-family: 'Play', sans-serif;
-    font-weight: 700;
-    text-transform: uppercase;
-}
-
 
 .container {
   max-width: 1272px;
@@ -22,13 +16,9 @@ body h1, h2 {
   
 }
 
-section {
-    height: 100vh;
-    background-color: darkcyan;
-}
 
 footer {
-    height: 325px;
+    height: 100%;
     background-color: #152C39;
 }
 
@@ -44,8 +34,9 @@ footer .container {
 
 .footer-info-block {
     padding-top: 31px;
-    display: flex;
+    display: grid;
     color: rgba(255, 255, 255, .8);
+    grid-template-columns: repeat(2,1fr)
     
 }
 
@@ -67,7 +58,10 @@ footer .container {
     justify-content: space-between;
     max-width: 72px;
     height: 84px;
-    padding-left: 76px;
+    color:rgba(255, 255, 255, .8);
+}
+
+.footer-links a {
     color:rgba(255, 255, 255, .8);
 }
 
@@ -98,6 +92,8 @@ footer .container {
 }
 
 .footer-other {
+    padding-top: 55px;
+    padding-bottom: 32px;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -123,4 +119,92 @@ footer .container {
     width: 100%;
     background: darkgray;
     margin-top: -23px;
+}
+
+.footer-nav-link {
+    position: relative;
+    transition: all .2s;
+}
+
+.footer-nav-link:hover::after {
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 1px;
+    background-color: rgba(255, 255, 255, .5);
+    left: 0;
+    bottom: -1px;
+
+}
+
+
+
+
+
+
+
+
+@media (max-width: 1248px) {
+    .footer-main {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .footer-block {
+        padding-top: 20px;
+    }
+
+
+    
+    
+}
+
+@media (max-width: 768px) {
+    .footer-nav-list {
+        display: flex;
+        flex-direction:column;
+        padding-top: 40px;
+        font-size: 20px;
+        gap: 18px;
+
+    }
+
+    .footer-main{
+        display: flex;
+        flex-direction: column;
+        justify-content:flex-start;
+
+    }
+
+    .footer-logo img {
+        width: 240px;
+        height: 46.957px;
+        
+    }
+
+    .footer-block {
+        padding-top: 0px;
+    }
+
+    /* .footer-nav-link {
+        position: relative;
+        transition: all .2s ease;
+    } */
+
+    /* .footer-nav-link:hover::after {
+        position: absolute;
+        content: '';
+        width: 100%;
+        height: 1px;
+        background-color: rgba(255, 255, 255, .5);
+        left: 0;
+        bottom: -1px;
+    } */
+
+     .footer-info-block {
+        
+        grid-template-columns: 1fr;
+        gap: 40px;
+    } 
+
 }
